[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http = "1.2.0"
once_cell = "1.20.2"
open = "5.3.1"
serde = { version = "1.0.217", features = ["derive"] }
twitch_api = { version = "0.7.2", features = ["twitch_oauth2", "helix", "client", "reqwest", "eventsub"] }
clap = { version = "4.5.26", features = ["derive", "env"] }
dotenvy = "0.15.7"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
reqwest = "0.12.12"
eyre = "0.6.12"
futures = "0.3.31"
url = "2.5.4"
rand = "0.9.1"
